@@ -7,6 +7,7 @@ From ucommon 1.5.0 to 1.6.0
 - cmodel.sh support for broken libtool versions.
 - lots of tcpstream/socket bug fixes and new tcpstream unit test added.
 - changes in tcpstream abi to use address objects by reference.
+- dynamic loader support added.
 
 From ucommon 1.4.2 to 1.5.0
 - added gnu common c++ based tcp streaming class to ucommon.
